# Tensors

./: .gitignore  Cargo.toml  README.md
assets/: CONTRIBUTING.md  LICENSE  katex.html
src/: lib.rs
src/activation/: elu.rs  leaky_relu.rs  mod.rs  relu.rs  selu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/linalg/: matrix.rs  matrix_conv.rs  matrix_ops.rs  mod.rs  tensor.rs  tensor_ops.rs  vector.rs
src/loss/: binarycrossentropy.rs  crossentropy.rs  mape.rs  mod.rs  mse.rs  sse.rs
src/nn/: linear.rs  linear_builder.rs  mod.rs  neural_network_builder.rs  rnn.rs  sequential.rs
src/optim/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
src/utils/: autodiff.rs  mod.rs
