[package]
name = "tensors"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[dependencies]
rand = "0.8"
rayon = "1.10.0"
# cargo rustdoc --open -- --html-in-header ./tensors/target/doc/katex.html