[package]
name = "tensorrs"
version = "0.2.0"
authors = ["Anton Krop antonjobonly@gmail,com"]
edition = "2021"
repository = "https://github.com/GooseKIller/Tensors"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[dependencies]
rand = "0.8"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"