[package]
name = "tensorrs"
version = "0.3.1"
authors = ["Anton Krop antonjobonly@gmail,com"]
edition = "2021"
description = "Tensors is a lightweight machine learning library in Rust"
repository = "https://github.com/GooseKIller/Tensors"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "assets/katex.html"]

[dependencies]
rand = "0.8"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"